--- a/style.css
+++ b/style.css
@@ -3,3 +3,48 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  text-align: center;
+  padding: 10px;
+  background: grey;
+}
+
+section#featured-property {
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 13px;
+}
+
+p {
+  text-align: center;
+  width: 800px;
+  line-height: 2.5;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+
+div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
